--- a/academy.css
+++ b/academy.css
@@ -9,7 +9,7 @@ body{
 	content: '';
 	height: 100vh;
 	width: 100%;
-	background-image: url(IMG/img3.jpeg);
+	background-image: url(img3.jpeg);
 	background-size: cover;
 	display: block;
 	background-repeat: no-repeat;
